Fixed css overflow thru vh instead of %...

--- a/client/src/components/Chat/Chat.module.css
+++ b/client/src/components/Chat/Chat.module.css
@@ -1,6 +1,5 @@
 .chatContainer {
-    background-color: red;
-    max-height: 100%;
+    max-height: 50vh;
 }
 
 .pendingNoti {
@@ -10,6 +9,7 @@
 .messages {
     padding: 0 0 5em;
     overflow-y: scroll;
+    max-height: 45vh;
     display: flex;
     flex-direction: column;
 }
