--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -39,7 +39,6 @@
     border-radius: 12px;
     background-color: var(--black);
     color: white;
-    background-color: white;
 }
 
 .userSection {
